refactor: move server login in server js

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start:dev": "NODE_ENV=development  nodemon app.js",
-    "start:prod": "NODE_ENV=production  nodemon app.js"
+    "start:dev": "NODE_ENV=development  nodemon server.js",
+    "start:prod": "NODE_ENV=production  nodemon server.js"
   },
   "author": "Nika Qanashvili",
   "license": "ISC",
