feat: add mongoose database

--- a/config.env
+++ b/config.env
@@ -1,5 +1,6 @@
 NODE_ENV=development
 PORT=3000
 IsMaintenance=true
-DB_USER=test
-DB_PASS=test
+DB_USER=qanashvilinika7
+DB_PASS=diasamidze123
+DB_URL=mongodb+srv://qanashvilinika7:diasamidze123@cluster0.j6za2.mongodb.net/ecommerce-test
